<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/gradient_loginheader"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="20dp"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="@string/enter_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:phoneNumber="true"
                    android:textColor="@color/black"

                    android:layout_marginTop="8dp"
                    android:padding="8dp"

                    android:layout_width="match_parent"
                    android:id="@+id/txt_login_phone"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/txt_login_mailinvalidd"
                    android:textStyle="italic"
                    android:text="@string/invalid_credential"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:textAllCaps="false"
                    android:paddingRight="30dp"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    android:background="@color/black"
                    android:id="@+id/btn_login_submit"


                    android:layout_width="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/padding_10"
                    android:id="@+id/spn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dimen_16"
        android:layout_height="100dp">
        <View
            android:background="@color/colorPrim2"
            android:layout_width="100dp"
            android:layout_marginBottom="@dimen/padding_10"
            android:layout_height="3dp"/>
        <TextView

            android:fontFamily="@font/poppins"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/app_name_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
