<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OTP_validation">
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_loginheader"
                    android:layout_width="match_parent"
                    android:layout_marginTop="-10dp"
                    android:layout_height="140dp"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    app:cardCornerRadius="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/unique_grey"
                    android:layout_height="100dp">
                <ImageView
                    android:src="@drawable/otp6"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout

                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:text="Enter OTP"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/we_have_sent_you_access_code_via_sms_for_mobile_verification"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edt_reg_otp1"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:textColor="@color/black"
                    android:padding="5dp"

                    android:phoneNumber="true"
                    android:layout_marginLeft="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="60dp"
                    android:orientation="horizontal"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_otp_resend"
                        android:layout_weight="1.0"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/resend_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_weight="1.0"
                        android:id="@+id/txt_otp_timer"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/dark_blue"
                        android:text="@string/timer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/prg_otp"
                    android:layout_marginTop="10dp"
                    android:progressTint="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_gravity="center"
                    android:id="@+id/btn_reg_otp1"
                    android:textColor="@color/white"
                    android:text="@string/verify"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:background="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>