<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Album_main">
    <androidx.cardview.widget.CardView
        app:cardElevation="1dp"
        android:id="@+id/crd_back"
        android:layout_width="40dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="@dimen/dimen_16"
        app:cardBackgroundColor="@color/semi_trans"
        android:layout_height="40dp">
        <ImageView
            android:backgroundTint="@color/white"

            android:layout_gravity="center"
            android:background="@drawable/ic_back"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:adjustViewBounds="true"
        android:id="@+id/img_artistmain_art"
        android:background="@drawable/ic_default"
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:layout_height="250dp"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/gradient_artistheader"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="250dp">
            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:padding="@dimen/padding_10"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView

                        android:layout_gravity="center_horizontal"
                        android:textSize="18dp"
                        android:id="@+id/txt_artist_name"
                        android:textColor="@color/black"
                        android:text="Artist Name"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_artistmain_details"
                    android:layout_gravity="center_horizontal"
                    android:text="details"
                    android:textColor="@color/textgrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_artistmain_summary"
                    android:layout_marginTop="@dimen/padding_10"
                    android:text="Summary"
                    android:textColor="@color/textgrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/top_albums"
                    android:textSize="16dp"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/padding_10"
                    android:id="@+id/rv_artistalbums"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="@dimen/dimen_16"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/similar_artists"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/padding_10"
                    android:id="@+id/rv_artistssimilar"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="@dimen/dimen_16"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/top_tracks"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/padding_10"
                    android:id="@+id/rv_artiststracks"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <include layout="@layout/bottom_trackinfo"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>