<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Genre_main">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/app_bar"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/img_back"
                    android:background="@drawable/ic_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/laygenremain_header"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginLeft="@dimen/padding_10"
                    android:layout_weight="2.0"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        app:cardBackgroundColor="@color/black"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="5dp"
                        android:layout_height="100dp">
                    <ImageView
                        android:id="@+id/img_genremain_art"
                        android:background="@drawable/icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
                    <LinearLayout
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16dp"
                            android:id="@+id/txt_genremain_no_artist"
                            android:text="0"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textColor="@color/textgrey"
                            android:text="@string/artists"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16dp"
                            android:id="@+id/txt_genremain_no_tracks"
                            android:text="0"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView

                            android:text="@string/tracks"
                            android:textColor="@color/textgrey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16dp"
                            android:id="@+id/txt_genremain_no_albums"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/albums"
                            android:textColor="@color/textgrey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_genremain_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Genre"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_genremain_summary"

                    android:text="Summary"
                    android:textColor="@color/textgrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
            <com.google.android.material.tabs.TabLayout
                app:tabMinWidth="75dp"
                android:id="@+id/tabs"
                app:tabMode="fixed"

                android:layout_width="wrap_content"
                app:tabTextColor="@color/textgrey"

                app:tabSelectedTextColor="@color/black"
                app:tabIndicatorColor="@color/black"
                android:layout_height="wrap_content"
                android:background="@color/white" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>